# Iudas

./: .bumpversion.cfg  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  README.md  config.json  htaccess  myfunctions.py  pelicanconf.py  pyproject.toml  requirements.txt  scripts.py
.github/workflows/: publish-pypi.yml  publish.yml  python-publish.yml
plugins/: README.md
screenshots/: README.md
static/: bootstrapz.css
static/Fonts/TTF/: EasyReading.License.txt
static/css/: Z.css  bootstrap.css
static/js/: mosparo.js  navbar.js  spinner.js
static/lunr/: README.md
static/php/: README.md  new-ideas.php  send-message.php
static/php/lang/: it.php
static/src-import/: custom.scss
static/tipuesearch/: tipuesearch.css
templates/: analytics.html  archives.html  article.html  author.html  authors.html  base.html  categories.html  category.html  comments.html  comments_form.html  contact_form.html  footer.html  index.html  new_memo.html  pagination.html  period_archives.html  search.html  sharing.html  sidebar.html  tag.html  tags.html
themes/Iudas/static/: bootstrapz.css
themes/Iudas/static/Fonts/TTF/: AtkinsonHyperlegible.License.txt
themes/Iudas/static/js/: README.md  matomo-tracking.js
themes/Iudas/static/lunr/: README.md  lunr.it.js  lunr.stemmer.support.js
themes/Iudas/static/php/: README.md  send-message.php
themes/Iudas/static/php/lang/: en.php
themes/Iudas/templates/: archives.html  authors.html  base.html  categories.html  category.html  comments_form.html  contact_form.html  index.html  page.html  period_archives.html  search.html  sharing.html  tag.html
