[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pelican-theme-iudas"
version = "3.3.1"
description = "A Pelican SSG blog theme focused on Privacy, Safety and Accessibility"
authors = [
	{ name = "Maurizio Paglia", email = "maurizio@mauriziopaglia.it" },
]
license = "LICENSE"
readme = "README.md"
changelog = "CHANGELOG.md"
keywords = ["pelican", "theme", "Iudas"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Themes",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
 "requests>2",
]

[project.urls]
"Homepage" = "https://github.com/mpaglia0/Iudas"
"Bug Tracker" = "https://github.com/mpaglia0/Iudas/issues"

[tool.pdm.build]
source-includes = [
    "CHANGELOG.md",
    "README.md",
]
includes = ["pelican/"]
excludes = ["**/.DS_Store"]
